Sun Feb  3 15:59:57 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
	src:
	* code.c (Code_EvalLowest, Code_Eval, Code_EvalLow): Drop no longer used
	instrOffsetP parameter.
	(Code_ExpandCurrAreaSymbolAsAddr): Remove.
	* code.h (Code_Eval, Code_EvalLow): Likewise.
	* decode.c (Decode): Follow instrOffsetP parameter removal.
	* lit.c (Lit_DumpPool): Likewise.
	* symbol.c (Symbol_OutputForAOF, Symbol_OutputForELF, Symbol_Define):
	Likewise.
	* directive_storagemap.c (c_alloc): Likewise.
	* value.c (Value_Equal): Likewise.
	* expr.c (Expr_Eval): Likewise.
	* directive_data.c (DefineInt_HandleSymbols, DefineInt): Make size
	parameter unsigned.
	* m_cpuctrl.h: Remove decode.h include header.
	* m_fpe.h: Likewise.
	* m_copmem.h: Likewise.
	* m_cpu.h: Likewise.
	* m_cpumem.h: Likewise.  Add stdint.h/inttypes.h header include.
	* directive_data.h: Likewise.
	(DefineInt_HandleSymbols): Make size parameter unsigned.

Fri Feb  1 03:29:51 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src;
	* m_cpumem.c (LSM_Type_e, GetLoadStoreMultipleArg,
	LoadStoreMultiple): Add.
	(dstreglist): Remove.
	* it.c (m_it): Move ARMv6T2 target test to...
	(IT_EmitIT): ...here.
	(IT_ApplyCond): Filter on condition code only.
	* get.h (BASE_MULTI, GET_BASE_MULTI): Remove.
	* option.c (Option_GetInstrWidth): Make difference between
	pre-UAL only and UAL support.
	(IsEndOfKeyword): Simplify.
	(Option_CondLdmStm): Add UAL syntax support.
	* option.h: Beautify.

	* unittests/compare/core/instr_ldm_stm_pop_push.s: Recreated from
	scratch.
	* unittests/compare/core/directive_rlist.s: Fix PUSH/POP with hat
	tests.

Fri Feb  1 03:22:22 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/compare/core/directive_data_integer.s: Added DCI.N/DCI.W
	tests.

Fri Feb  1 01:54:02 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpu.c (core_sxt_uxt): Add target check.

Fri Feb  1 01:25:33 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* state.h (SyntaxInstrState_e, State_Set): Add.